--- a/public/install-player.html
+++ b/public/install-player.html
@@ -2,20 +2,46 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>AGM 참가자 설치</title>
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="AGM 참가자">
+
   <link rel="manifest" href="/manifest-player.json" />
   <meta name="theme-color" content="#0b1320" />
 </head>
-<body style="font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif; padding:24px; line-height:1.5;">
+<body style="font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif; padding:24px; line-height:1.55;">
   <h1 style="margin:0 0 10px;">AGM 참가자 모드</h1>
-  <p style="margin:0 0 14px;">이 페이지에서 <b>홈 화면에 추가</b>하면, 참가자 전용 아이콘이 만들어집니다.</p>
+  <p style="margin:0 0 14px;">
+    이 화면에서 <b>공유 → 홈 화면에 추가</b>를 하면, <b>참가자 전용</b> 아이콘이 만들어집니다.
+  </p>
+
   <ol style="margin:0 0 16px; padding-left:18px;">
-    <li>Safari 공유 버튼</li>
+    <li>Safari 하단 공유 버튼</li>
     <li><b>홈 화면에 추가</b></li>
-    <li>아이콘 이름을 “AGM 참가자”로 저장</li>
+    <li>이름을 “AGM 참가자”로 저장</li>
   </ol>
-  <a href="/player/events?entry=player" style="display:inline-block; padding:10px 14px; background:#0b1320; color:#fff; text-decoration:none; border-radius:10px;">참가자 모드 열기</a>
-  <p style="margin-top:16px; color:#666;">운영자 전용 아이콘은 <code>/install-admin.html</code>에서 별도로 추가하세요.</p>
+
+  <a href="/player/events?entry=player"
+     style="display:inline-block; padding:10px 14px; background:#0b1320; color:#fff; text-decoration:none; border-radius:10px;">
+    참가자 모드 열기
+  </a>
+
+  <p style="margin-top:16px; color:#666;">
+    운영자 전용 아이콘은 <code>/install-admin.html</code>에서 따로 추가하세요.
+  </p>
+
+  <script>
+    (function(){
+      try {
+        var isStandalone = (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches) || (window.navigator && window.navigator.standalone);
+        if (isStandalone) {
+          window.location.replace('/player/events?entry=player');
+        }
+      } catch(e){}
+    })();
+  </script>
 </body>
 </html>
