--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+<!-- /public/index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,7 +16,22 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link id="agm-manifest" rel="manifest" href="%PUBLIC_URL%/manifest-admin.json" />
+    <script>
+      (function () {
+        try {
+          var p = window.location.pathname || "";
+          var isPlayer = p.indexOf("/player") === 0;
+          var m = document.getElementById("agm-manifest");
+          if (m) {
+            m.setAttribute(
+              "href",
+              (isPlayer ? "%PUBLIC_URL%/manifest-player.json" : "%PUBLIC_URL%/manifest-admin.json")
+            );
+          }
+        } catch (e) {}
+      })();
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
