--- a/public/pwa-admin.html
+++ b/public/pwa-admin.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- iOS 홈화면(standalone)로 실행되게 하는 메타 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="AGM 운영자" />
+
+    <!-- 아이콘(있으면 사용됨) : public/ 안에 존재하는 이미지로 맞춰서 교체 가능 -->
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <title>AGM 운영자 모드</title>
   </head>
   <body>
