--- a/public/pwa-player.html
+++ b/public/pwa-player.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- iOS 홈화면(standalone)로 실행되게 하는 메타 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="AGM 참가자" />
+    <!-- 홈화면 아이콘(필요시 파일명은 프로젝트에 맞게 교체) -->
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
     <title>AGM 참가자 모드</title>
   </head>
   <body>
     <script>
       try {
+        // 참가자 아이콘으로 실행 시, 항상 참가자 로그인으로 보내기
         localStorage.setItem('agm.lastRoute', '/player/login-or-code');
         localStorage.setItem('agm.lastMode', 'player');
       } catch (e) {}
