참가자 웹앱, 운영자 로그인 뜨는 문제 수정_3

--- a/public/pwa-player.html
+++ b/public/pwa-player.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- iOS 홈화면(standalone)로 실행되게 하는 메타 -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="AGM 참가자" />
-    <!-- 홈화면 아이콘(필요시 파일명은 프로젝트에 맞게 교체) -->
-    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
     <title>AGM 참가자 모드</title>
   </head>
   <body>
     <script>
       try {
-        // 참가자 아이콘으로 실행 시, 항상 참가자 로그인으로 보내기
+        // ✅ (대안B) 이 기기/아이콘은 "참가자 모드"로 실행되길 원한다는 의도를 영구 저장
+        // - iOS 홈화면(WebClip/PWA)에서 같은 도메인(origin)을 공유하면
+        //   마지막으로 사용한 경로/모드가 덮어써지는 경우가 많아, 참가자 아이콘인데도 운영자 로그인으로 뜰 수 있음.
+        // - installMode는 pwa-admin/pwa-player 진입 시에만 세팅하고, 앱 내 이동으로는 덮어쓰지 않음.
+        localStorage.setItem('agm.installMode', 'player');
         localStorage.setItem('agm.lastRoute', '/player/login-or-code');
         localStorage.setItem('agm.lastMode', 'player');
       } catch (e) {}
