--- a/public/pwa-admin.html
+++ b/public/pwa-admin.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- iOS 홈화면(standalone)로 실행되게 하는 메타 -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="AGM 운영자" />
-
-    <!-- 아이콘(있으면 사용됨) : public/ 안에 존재하는 이미지로 맞춰서 교체 가능 -->
-    <link rel="apple-touch-icon" href="/logo192.png" />
     <title>AGM 운영자 모드</title>
   </head>
   <body>
     <script>
       try {
+        // ✅ (대안B) 이 기기/아이콘은 "운영자 모드"로 실행되길 원한다는 의도를 영구 저장
+        // - iOS 홈화면에서 동일 도메인(origin) 2아이콘은 세션/스토리지 공유로 인해 서로 덮어쓰는 경우가 있어
+        //   installMode 키로 "이 기기는 어떤 모드로 시작해야 하는지"를 고정해 둔다.
+        localStorage.setItem('agm.installMode', 'admin');
         localStorage.setItem('agm.lastRoute', '/login');
         localStorage.setItem('agm.lastMode', 'admin');
       } catch (e) {}
