--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,40 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- AGM: iOS 홈화면(PWA)에서 참가자/운영자 아이콘이 같은 도메인이라 섞이는 문제 완화용 가드 -->
+    <script>
+      (function () {
+        try {
+          var isStandalone = false;
+          try {
+            isStandalone =
+              (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches) ||
+              window.navigator.standalone === true;
+          } catch (e) {}
+          if (!isStandalone) return;
+
+          // Cookie에서 agm_mode 읽기 (player/admin)
+          var m = document.cookie.match(/(?:^|;\s*)agm_mode=([^;]+)/);
+          var mode = m ? decodeURIComponent(m[1]) : '';
+          if (!mode) return;
+
+          var path = (location && location.pathname) || '/';
+
+          // 참가자 모드인데 /player가 아니면 참가자 로그인으로 즉시 보정
+          if (mode === 'player' && !path.startsWith('/player')) {
+            location.replace('/player/login-or-code');
+            return;
+          }
+
+          // 운영자 모드인데 /player로 열렸으면 운영자 로그인으로 보정
+          if (mode === 'admin' && path.startsWith('/player')) {
+            location.replace('/login');
+            return;
+          }
+        } catch (e) {}
+      })();
+    </script>
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -14,34 +48,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <!--
-      iOS 홈화면(PWA)에서 "참가자(/player/*)"로 추가했는데도 앱 실행 시
-      운영자 start_url("/")로 열리는 문제를 방지하기 위해
-      pathname에 따라 manifest를 동적으로 선택한다.
-      - /player/*  -> manifest-player.json (start_url: /player/events, scope: /player/)
-      - 그 외      -> manifest-admin.json  (start_url: /, scope: /)
-      * 레이아웃/CSS/로직은 건드리지 않고 public(head)만 변경
-    -->
-    <link id="app-manifest" rel="manifest" href="%PUBLIC_URL%/manifest-admin.json" />
-    <script>
-      // IMPORTANT: iOS 홈화면 앱 실행 시 현재 URL보다 manifest의 start_url을 우선 적용하는 경우가 있음.
-      // 따라서 첫 로드 시점에 pathname을 보고 manifest를 올바르게 바꿔준다.
-      (function () {
-        try {
-          var p = (location && location.pathname) ? location.pathname : "/";
-          var isPlayer = p === "/player" || p.indexOf("/player/") === 0;
-          var link = document.getElementById("app-manifest");
-          if (link) {
-            link.setAttribute(
-              "href",
-              (isPlayer ? "%PUBLIC_URL%/manifest-player.json" : "%PUBLIC_URL%/manifest-admin.json")
-            );
-          }
-        } catch (e) {
-          // no-op
-        }
-      })();
-    </script>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
