--- a/public/pwa-player.html
+++ b/public/pwa-player.html
@@ -7,16 +7,16 @@
   </head>
   <body>
     <script>
-      try {
-        // ✅ (대안B) 이 기기/아이콘은 "참가자 모드"로 실행되길 원한다는 의도를 영구 저장
-        // - iOS 홈화면(WebClip/PWA)에서 같은 도메인(origin)을 공유하면
-        //   마지막으로 사용한 경로/모드가 덮어써지는 경우가 많아, 참가자 아이콘인데도 운영자 로그인으로 뜰 수 있음.
-        // - installMode는 pwa-admin/pwa-player 진입 시에만 세팅하고, 앱 내 이동으로는 덮어쓰지 않음.
-        localStorage.setItem('agm.installMode', 'player');
-        localStorage.setItem('agm.lastRoute', '/player/login-or-code');
-        localStorage.setItem('agm.lastMode', 'player');
-      } catch (e) {}
-      location.replace('/player/login-or-code');
+      // public/pwa-player.html
+      // 참가자 모드 의도를 Cookie로 저장 (iOS 홈화면/PWA에서 세션/스토리지 꼬임 대비)
+      (function () {
+        try {
+          document.cookie =
+            'agm_mode=player; Max-Age=31536000; Path=/; SameSite=Lax';
+        } catch (e) {}
+        // 참가자 로그인 라우트로 이동
+        location.replace('/player/login-or-code');
+      })();
     </script>
   </body>
 </html>
